Update copy sent by Nicole
Fix trailing whitespace

--- a/src/app/pages/institutional-partnership/institutional-partnership.html
+++ b/src/app/pages/institutional-partnership/institutional-partnership.html
@@ -22,20 +22,22 @@
 
 					<p>This program is for institutions ready to make an impact on campus by dedicating the necessary time and resources in an effort to motivate faculty and effort to utilize OER to drive student success, retention, and completion.
 					</p>
+					
+					<p>Each year, 10-12 institutions are selected for this program based on a competitive application process.</p>
 
 					<h2>Cost</h2>
-					<p>Provided for free thanks to a generous grant funded by the William & Flora Hewlett Foundation.</p>
+					<p><span class="strike">$20,000</span> Provided for free thanks to a generous grant funded by the William & Flora Hewlett Foundation.</p>
 
 					<h2>Timeline</h2>
-					<p>Applications due April 24, 2018
-					Selected partners will be notified by May 15, 2018
-					Program begins June 14, 2018
+					<p>Applications due April 24, 2018<br>
+					Selected partners will be notified by May 15, 2018<br>
+					Program begins June 14, 2018<br>
 					</p>
 
 					<h2>What you’ll get</h2>
-					<p>Applications due April 24, 2018
-					Selected partners will be notified by May 15, 2018
-					Program begins June 14, 2018
+					<p>Applications due April 24, 2018<br>
+					Selected partners will be notified by May 15, 2018<br>
+					Program begins June 14, 2018<br>
 					</p>
 
 					<h2>What you’ll get</h2>
@@ -52,23 +54,21 @@
 						<li>At least one campus visit by an OpenStax representative.*</li>
 						<li>Up to three webinars on OpenStax, OER, and or Rice University’s role in OER for your institution per year.</li>
 						<li>Press release template for you to send out to generate publicity for your institution.</li>
-						<li>Inclusion on the OpenStax website, presentations, etc. as a partner school.<br>
-							<span>*Optional. Travel fees paid for by institution</span>
-						</li>
+						<li>Inclusion on the OpenStax website, presentations, etc. as a partner school.</li>
 					</ul>
 					<h5>After first 12 months in program:</h5>
 					<ul>
 						<li>Individualized consulting on your OER effort and strategies.</li>
-						<li>Institutions who have implemented these strategies have, on average, increased the number of faculty adopting OpenStax textbooks by 392% and the number of students impacted by 490% in one year!</li>
 						<li>Continual participation in Listserv discussions</li>
 						<li>Campus visits as requested.*</li>
 						<li>Up to three webinars on OpenStax, OER, and or Rice University’s role in OER for your institution per year.</li>
 						<li>Monthly reports from OpenStax about new use and new interest by faculty at your institution who have contacted OpenStax expressing interest.</li>
 						<li>Inclusion on the OpenStax website, presentations, etc. as a partner school.</li>
 					</ul>
+						<span>*Optional. Travel fees paid for by institution</span>
 
 					<h2>Current Institutional Partners:</h2>
-					<p><a href="/impact" title="list of current Institutional Partners">Click here</a> for a list of current Institutional Partners.</p>
+					<p><a href="/impact" title="list of current Institutional Partners" target="_blank">Click here</a> for a list of current Institutional Partners.</p>
 
 					<h2>Requirements</h2>
 					<ul>
