--- a/src/app/pages/institutional-partnership/institutional-partnership.scss
+++ b/src/app/pages/institutional-partnership/institutional-partnership.scss
@@ -121,6 +121,10 @@
                 }
             }
         }
+
+        .strike {
+            text-decoration: line-through;
+        }
     }
 
     .testimonial {
