Hook up new comp copy form

--- a/src/app/pages/details-new/request-form/request-form.scss
+++ b/src/app/pages/details-new/request-form/request-form.scss
@@ -89,6 +89,10 @@
         &.primary {
             @extend %primary;
         }
+
+        &[disabled] {
+            cursor: not-allowed;
+        }
     }
 
     .confirmation-header {
