--- a/src/app/pages/details-new/request-form/request-form.html
+++ b/src/app/pages/details-new/request-form/request-form.html
@@ -8,19 +8,37 @@
             <div class="header">Book requested</div>
             <img src="{model.coverUrl}">
             {model.title}
+            <iframe name="form-response" id="form-response" src="" width="0" height="0"></iframe>
         </div>
-        <form>
+        <form accept-charset="UTF-8" target="form-response"
+         action="https://{model.salesforce.salesforceHome}/servlet/servlet.WebToLead?encoding=UTF-8" method="post"
+         >
             <div>
+                <div hidden>
+                    <input type="hidden" name="utf8" value="✓">
+                    <input type="hidden" name="oid" value="{model.salesforce.oid}">
+                    <input type="hidden" name="lead_source" value="Comp Request">
+                    <input type="hidden" name="first_name" value="{model.user.firstName}">
+                    <input type="hidden" name="last_name" value="{model.user.lastName}">
+                    <input type="hidden" name="email" value="{model.user.email}">
+                    <input type="hidden" name="00NU00000053nzR" value="{model.salesforceTitle}">
+                </div>
                 How many students will be using {model.title} this semester?
                 <div class="hint">
                     Include sections taught by any teaching assistants that you supervise.
                 </div>
-                <input>
+                <input name="00NU00000052VId" type="number" min="0" required>
             </div>
-            <div class="button-row">
-                <button class="primary">Request iBook</button>
-                <button type="cancel">Cancel</button>
-            </div>
+            <if condition="model.notAvailable">
+                <div>
+                    This title is not available.
+                </div>
+            <else>
+                <div class="button-row">
+                    <button class="primary" disabled="{model.salesforceTitle ? null : ''}">Request iBook</button>
+                    <button type="cancel">Cancel</button>
+                </div>
+            </if>
         </form>
     <else>
         <div class="confirmation">
