New Details page UX fixes round 3

--- a/src/app/components/get-this-title-new/get-this-title.html
+++ b/src/app/components/get-this-title-new/get-this-title.html
@@ -33,7 +33,7 @@
             </div>
         </div>
         <div class="options">
-            <div if="model.includeTOC" class="option">
+            <div if="model.includeTOC && model.tableOfContents" class="option">
                 <a href="/" role="button" class="show-toc">
                     <span class="fa fa-list-ol"></span>
                     <span class="text">Table of contents</span>
