--- a/src/app/pages/details-new/details.html
+++ b/src/app/pages/details-new/details.html
@@ -1,5 +1,5 @@
 <template args="model">
-    <div class="hero" data-slug="{model.slug}">
+    <div class="hero {model.reverseGradient ? 'reverse-gradient' : ''}" data-slug="{model.slug}">
         <div class="content book-title">
             <h1>{model.bookTitle}</h1>
         </div>
