--- a/src/app/pages/details-new/instructor-resource-tab/instructor-resource-tab.scss
+++ b/src/app/pages/details-new/instructor-resource-tab/instructor-resource-tab.scss
@@ -116,7 +116,7 @@ $icon-size: 6rem;
         }
 
         .bottom {
-            align-items: baseline;
+            align-items: center;
             background-color: ui-color(default);
             border-bottom-left-radius: 0.4rem;
             border-bottom-right-radius: 0.4rem;
