--- a/src/app/components/get-this-title-new/toc-dialog/toc-dialog.html
+++ b/src/app/components/get-this-title-new/toc-dialog/toc-dialog.html
@@ -1,4 +1,4 @@
 <template args="model">
-    <div class="toc-region" skip="true"></div>
+    <div class="toc-region" skip="true">Not available</div>
     <a class="btn primary" href="{model.webviewLink}">View online</a>
 </template>
