--- a/src/app/pages/details-new/phone-view/instructor-resources-pane/instructor-resources-pane.scss
+++ b/src/app/pages/details-new/phone-view/instructor-resources-pane/instructor-resources-pane.scss
@@ -14,6 +14,8 @@
     .free-resources-region,
     .paid-resources-region {
         display: grid;
+        grid-gap: $normal-margin;
+        grid-template-columns: repeat(50, 20rem);
 
         h3 {
             @include set-font(h4);
@@ -23,13 +25,11 @@
     }
 
     .free-resources-region {
-        grid-gap: $normal-margin;
-        grid-template-columns: repeat(50, 20rem);
-    }
 
-    .paid-resources-region {
-        grid-gap: 1rem;
-        grid-template-columns: repeat(5, 7.5rem);
+        .resource-box > .top {
+            max-height: 30rem;
+            overflow: hidden;
+        }
     }
 
     .logo-box {
@@ -38,11 +38,11 @@
         // TODO Replace with variable, probably
         box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.2);
         display: flex;
-        height: 6.4rem;
+        height: 9rem;
         justify-content: center;
 
         img {
-            max-width: 7.5rem;
+            max-width: 17rem;
             padding: $tight-margin;
         }
     }
