--- a/src/app/pages/details-new/student-resource-tab/student-resource-tab.html
+++ b/src/app/pages/details-new/student-resource-tab/student-resource-tab.html
@@ -1,9 +1,11 @@
 <div>
-    <!-- TODO: Get this stuff from the CMS -->
-    <h2>Free stuff. <span class="unbold">No catch.</span></h2>
     <div class="free-stuff-blurb">
-        Access free resources integrated with your book. Sign up for an account
-        to access locked content.
+        <!-- TODO: Get this stuff from the CMS -->
+        <h2>Free stuff. <span class="unbold">No catch.</span></h2>
+        <div class="blurb-body">
+            Access free resources integrated with your book. Sign up for an account
+            to access locked content.
+        </div>
     </div>
     <div class="resources"></div>
 </div>
