--- a/src/app/pages/details-new/details.scss
+++ b/src/app/pages/details-new/details.scss
@@ -6,14 +6,13 @@
         .book-icon,
         .webinars .icon-cell {
             background-color: os-color($color);
-            color: text-color(white);
         }
 
         .hero {
-            background-image: linear-gradient(to right, os-color($color), lighten(os-color($color), 7));
+            background-image: linear-gradient(to right, darken(os-color($color), 4), lighten(os-color($color), 4));
 
             &.reverse-gradient {
-                background-image: linear-gradient(to right, lighten(os-color($color), 7), os-color($color));
+                background-image: linear-gradient(to right, lighten(os-color($color), 4), darken(os-color($color), 4));
             }
         }
 
@@ -48,6 +47,12 @@
         }
     }
 
+    .hero,
+    .book-icon,
+    .webinars .icon-cell {
+        color: text-color(white);
+    }
+
     .hero {
         @include set-color-items(gold);
         @include set-color-items(green);
@@ -61,7 +66,6 @@
 
         align-items: flex-end;
         background-image: linear-gradient(75deg, #aaa, #777);
-        color: text-color(normal);
         display: flex;
         min-height: 16.5rem;
         overflow: hidden;
@@ -83,16 +87,27 @@
             h1 {
                 @include title-font(4rem);
 
+                line-height: 1;
                 text-align: left;
-                // white-space: nowrap;
 
                 @include width-between($phone-max, $tablet-max) {
                     @include title-font(10rem);
+
+                    line-height: 1;
                 }
 
                 @include wider-than($tablet-max) {
                     @include title-font(13rem);
+
+                    line-height: 1;
                 }
+            }
+
+            .volume {
+                font-size: 50%;
+                font-weight: 300;
+                letter-spacing: normal;
+                line-height: 0.7;
             }
         }
     }
