--- a/src/app/pages/details-new/phone-view/errata-pane/errata-pane.html
+++ b/src/app/pages/details-new/phone-view/errata-pane/errata-pane.html
@@ -7,9 +7,9 @@
         suggestion and make necessary changes.
     </div>
     <div class="button-group">
-        <a href="/errata/?book={encodeURIComponent(model.title)}"
-            class="btn secondary">Errata list</a>
         <a href="/errata/form?book={encodeURIComponent(model.title)}"
-            class="btn">Suggest a correction</a>
+            class="btn secondary">Suggest a correction</a>
+        <a href="/errata/?book={encodeURIComponent(model.title)}"
+            class="btn">Errata list</a>
     </div>
 </template>
