--- a/src/app/components/get-this-title/get-this-title-polish.html
+++ b/src/app/components/get-this-title/get-this-title-polish.html
@@ -63,7 +63,7 @@
             <div if="model.pdfLink" class="option">
                 <a role="button" href="{model.pdfLink}" class="show-pdf-submenu"
                     tabindex="{model.submenu === '' ? 0 : -1}">
-                    <span class="fa fa-cloud-download"></span>
+                    <span class="fa fa-cloud-download-alt"></span>
                     Pobierz PDF
                     <if condition="model.comingSoon">{' (wersja redakcyjna)'}</if>
                 </a>
