Incorporate updated backend fields

--- a/src/app/components/tab-group/tab-group.scss
+++ b/src/app/components/tab-group/tab-group.scss
@@ -13,5 +13,5 @@
 }
 
 .tab-baseline {
-    @extend %tab-baseline !optional; // TODO: Remove when Pattern Library upgraded
+    @extend %tab-baseline;
 }
