--- a/src/app/pages/details-new/details.html
+++ b/src/app/pages/details-new/details.html
@@ -2,9 +2,11 @@
     <div class="hero {model.reverseGradient ? 'reverse-gradient' : ''}" data-slug="{model.slug}">
         <div class="content book-title">
             <h1>
-                <div if="model.titleIntro" class="volume">{model.titleIntro}</div>
-                {model.bookTitle}
-                <div if="model.volume" class="volume">{model.volume}</div>
+                <if condition="model.titleImage">
+                    <img class="title-image" src="{model.titleImage}" alt={model.bookTitle}>
+                <else>
+                    {model.bookTitle}
+                </if>
             </h1>
         </div>
     </div>
