--- a/src/app/pages/details-new/student-resource-tab/student-resource-tab.html
+++ b/src/app/pages/details-new/student-resource-tab/student-resource-tab.html
@@ -1,11 +1,8 @@
 <div>
     <div class="free-stuff-blurb">
         <!-- TODO: Get this stuff from the CMS -->
-        <h2>Free stuff. <span class="unbold">No catch.</span></h2>
-        <div class="blurb-body">
-            Access free resources integrated with your book. Sign up for an account
-            to access locked content.
-        </div>
+        <h2 data-html="freeStuff.heading" skip="true"></h2>
+        <div data-html="freeStuff.blurb" class="blurb-body" skip="true"></div>
     </div>
     <div class="resources"></div>
 </div>
