--- a/src/app/components/get-this-title/order-print-copy/order-print-copy.scss
+++ b/src/app/components/get-this-title/order-print-copy/order-print-copy.scss
@@ -66,7 +66,7 @@
         background-color: ui-color(white);
         border: 0;
         border-radius: 0.4rem;
-        box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.25);
+        box-shadow: $card-shadow;
         color: inherit;
         display: grid;
         grid-gap: $normal-margin;
