--- a/src/app/pages/details-new/instructor-resource-tab/instructor-resource-tab.html
+++ b/src/app/pages/details-new/instructor-resource-tab/instructor-resource-tab.html
@@ -2,27 +2,28 @@
     <div>
         <div class="free-stuff-blurb">
             <!-- TODO: Get this stuff from the CMS -->
-            <h2>Free stuff. <span class="unbold">No catch.</span></h2>
-            <div class="blurb-body">
-                Access free resources integrated with your book. Sign up for an account
-                to access locked content.
-            </div>
+            <h2 data-html="freeStuff.heading" skip="true"></h2>
+            <div data-html="freeStuff.blurb" class="blurb-body" skip="true"></div>
         </div>
         <div class="resources">
             <div class="resource-box double">
                 <h3>OpenStax Community Resources</h3>
+                <!-- TODO: get from CMS -->
                 <div class="blurb">
-                    Placeholder text about access, develop, share resources created by the
-                    OpenStax Community that align with OpenStax {model.bookTitle}.<br>
-                    <a href="http://oercommons.org">
-                        Visit the hub
-                        <i class="fa fa-external-link-alt"></i>
-                    </a>
+                  <span data-html="communityResource.blurb" skip="true"></span>
+                  <br>
+                  <a href="{model.communityResource.url}">
+                      {model.communityResource.cta}
+                      <i class="fa fa-external-link-alt"></i>
+                  </a>
                 </div>
                 <div class="bottom">
                     <div class="left"></div>
                     <div class="right">
-                        Download Chapter 5 enhanced lecture slides???
+                        <!-- TODO: get from CMS -->
+                        <a href="{model.communityResource.featureUrl}">
+                          {model.communityResource.featureText}
+                        </a>
                     </div>
                 </div>
             </div>
@@ -30,28 +31,20 @@
             <request-comp-copy skip="true"></request-comp-copy>
         </div>
     </div>
-    <a href="/blog/upcoming-openstax-webinars" class="webinars">
+    <a href="{model.webinar.url}" class="webinars">
         <div class="icon-cell"><span class="fa fa-desktop"></span></div>
         <div>
             <!-- TODO pull text from CMS -->
-            <h2>Find a webinar</h2>
-            <div class="blurb">
-                Learn more by attending
-                one of our free webinars featuring
-                OpenStax authors, staff, and partners.
-            </div>
+            <h2>{model.webinar.text}</h2>
+            <div class="blurb" data-html="webinar.blurb" skip="true"></div>
         </div>
     </a>
     <hr>
     <if condition="model.allies.length">
         <div class="ally-blurb">
             <!-- TODO Get this from the CMS -->
-            <h2>Want more?</h2>
-            <div class="blurb-body">
-                OpenStax Partners provide additional, low-cost resources for your
-                book. See what's offered for this title below and learn more about
-                our partners <a href="/partners">here</a>.
-            </div>
+            <h2>{model.ally.heading}</h2>
+            <div class="blurb-body" data-html="ally.blurb" skip="true"></div>
             <div class="ally-logo">
                 <img
                 src="http://staxlogos.openstax.org/OSX-ALLY-Gray-RGB-150dpi.png"
