--- a/src/app/pages/details-new/resource-box/resource-box.scss
+++ b/src/app/pages/details-new/resource-box/resource-box.scss
@@ -3,7 +3,7 @@
 .resource-box {
     background-color: ui-color(white);
     border-radius: 0.4rem;
-    box-shadow: 0 2px 6px 0 rgba(0, 0, 0, 0.25);
+    box-shadow: $card-shadow;
     color: inherit;
     display: flex;
     flex-direction: column;
